@@ -95,7 +95,7 @@ export("+.section",
        lonFormat,
        longitude,
        "longitude<-",
-       magneticDeclination,
+       magneticField,
        makeFilter,
        makeSection,
        mapContour,
